--- a/src/styles/components/_blocks.scss
+++ b/src/styles/components/_blocks.scss
@@ -802,6 +802,7 @@
     text-align: center;
     margin: 0;
     font-weight: 700;
+    padding: 0 15px;
   }
   @include media-breakpoint-up(lg) {
     &__title {
