--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -67,27 +67,32 @@ block content
             a(href="#").product-category-block
               .image.image_contain
                 img(data-src="./img/categories/2.png", alt="image").lazyload
-              h6.product-category-block__title Сухофрукты
+              h6.product-category-block__title Семена
           .swiper-slide
             a(href="#").product-category-block
               .image.image_contain
                 img(data-src="./img/categories/3.png", alt="image").lazyload
-              h6.product-category-block__title Смеси
+              h6.product-category-block__title Сухофрукты
           .swiper-slide
             a(href="#").product-category-block
               .image.image_contain
                 img(data-src="./img/categories/4.png", alt="image").lazyload
-              h6.product-category-block__title Семечки
+              h6.product-category-block__title Цукаты
           .swiper-slide
             a(href="#").product-category-block
               .image.image_contain
                 img(data-src="./img/categories/5.png", alt="image").lazyload
-              h6.product-category-block__title Сладости
+              h6.product-category-block__title Чурчхела и лаваш
           .swiper-slide
             a(href="#").product-category-block
               .image.image_contain
                 img(data-src="./img/categories/6.png", alt="image").lazyload
-              h6.product-category-block__title Наборы
+              h6.product-category-block__title Шоколад и мармелад
+          .swiper-slide
+            a(href="#").product-category-block
+              .image.image_contain
+                img(data-src="./img/categories/6.png", alt="image").lazyload
+              h6.product-category-block__title Наборы подарочные
 
       .swiper-pagination 
   
