--- a/src/views/o-kompanii.pug
+++ b/src/views/o-kompanii.pug
@@ -71,7 +71,7 @@ block content
             p Компания «Семушка» осуществляет прямой импорт сырья для своей продукции со всего мира. Сухофрукты по большей части отбираются и фасуются вручную. При засолке орехов и семечек используется как собственная технология соления в соляном растворе (арахис, миндаль, кешью), так и традиционная обвалка в соли в барабане (фисташки и семечки).
             p Все сырье проходит тщательный входной контроль, подвергается органолептическим и лабораторным исследованиям. После поступления в производство сырье дополнительно перебирается на инспекционных конвейерах вручную, для исключения попадания дефектных или поврежденных ядер и плодов, после чего поступает в производственные цеха для жарки, соления и фасовки.
           
-          a(href="#").video-block.image.image_cover
+          a(href="#video" data-modal='open' data-video='https://www.youtube.com/embed/-TB7V6MCXU4?autoplay=1').video-block.image.image_cover
             img(data-src="./img/Rectangle 117.jpg", alt="image").lazyload
             .icon
               svg
