--- a/src/views/o-kompanii.pug
+++ b/src/views/o-kompanii.pug
@@ -104,29 +104,41 @@ block content
             .icon
               svg
                 use(xlink:href='./img/icons/sprite.svg#play')
+
+        .shops-section__item 
+          .shops-section__item-image 
+            a(href="#pano360" data-modal='open' data-video='https://semushka.devgm.ru/tur/semushkaaviapark-3d/semushkaaviapark-3d.html').image-360.image.image_cover 
+              img(src="./img/Rectangle 182.jpg", alt="image").lazyload
+              .icon
+                svg
+                  use(xlink:href='./img/icons/sprite.svg#360')
+          .shops-section__item-label
+            .invitate-element 
+              .invitate-element__text Ждем вас по адресу:
+              .h6.invitate-element__title Москва, ул. Мясницкая, 13, с. 3
         
-        //block
         .shops-section__item 
           .shops-section__item-image 
-            <iframe src="https://semushka.devgm.ru/tur/semushkaaviapark-3d/semushkaaviapark-3d.html" scrolling="no"></iframe>
+            a(href="#pano360" data-modal='open' data-video='https://semushka.devgm.ru/tur/semushkamyasnitskaya-13/semushkamyasnitskaya-13.html').image-360.image.image_cover 
+              img(src="./img/Rectangle 182.jpg", alt="image").lazyload
+              .icon
+                svg
+                  use(xlink:href='./img/icons/sprite.svg#360')
           .shops-section__item-label
             .invitate-element 
               .invitate-element__text Ждем вас по адресу:
               .h6.invitate-element__title Москва, ул. Мясницкая, 13, с. 3
-        //block
+    
         .shops-section__item 
           .shops-section__item-image 
-            <iframe src="https://semushka.devgm.ru/tur/semushkamyasnitskaya-13/semushkamyasnitskaya-13.html"></iframe>
+            a(href="#pano360" data-modal='open' data-video='https://semushka.devgm.ru//tur/semushkavalovaya-12-3d/semushkavalovaya-12-3d.html').image-360.image.image_cover 
+              img(src="./img/Rectangle 182.jpg", alt="image").lazyload
+              .icon
+                svg
+                  use(xlink:href='./img/icons/sprite.svg#360')
           .shops-section__item-label
             .invitate-element 
               .invitate-element__text Ждем вас по адресу:
               .h6.invitate-element__title Москва, ул. Мясницкая, 13, с. 3
-        //block
-        .shops-section__item 
-          .shops-section__item-image 
-            <iframe src="https://semushka.devgm.ru//tur/semushkavalovaya-12-3d/semushkavalovaya-12-3d.html" scrolling="no"></iframe>
-          .shops-section__item-label
-            .invitate-element 
-              .invitate-element__text Ждем вас по адресу:
-              .h6.invitate-element__title Москва, ул. Мясницкая, 13, с. 3
+    
     
