--- a/src/styles/components/_modals.scss
+++ b/src/styles/components/_modals.scss
@@ -69,6 +69,10 @@
     &__title {
       text-align: center;
     }
+    &__container {
+      position: relative;
+      z-index: 1;
+    }
   }
   @include media-breakpoint-down(sm) {
     &-block {
@@ -151,6 +155,31 @@
       top: 0;
       left: 0;
     }
+  }
+  @include media-breakpoint-down(sm) {
+    &__block {
+      padding: 50px var(--container-gutter-x) 20px var(--container-gutter-x);
+    }
+  }
+}
+
+.modal-360 {
+  &__block {
+    padding: 60px 40px 40px 40px;
+    max-width: 100%;
+    height: 100%;
+  }
+  &__container {
+    width: 100%;
+    height: 100%;
+  }
+  iframe {
+    display: block;
+    border: 0;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
   }
   @include media-breakpoint-down(sm) {
     &__block {
