--- a/src/views/blocks/modals.pug
+++ b/src/views/blocks/modals.pug
@@ -246,3 +246,10 @@ include components
       .modal-block__container
         .video-modal__element
           iframe(src='' allow='autoplay')
+
+.modal.modal-360#pano360(style='display:none;')
+  .modal__wrapper(data-scroll-lock-scrollable)
+    .modal-block.modal-360__block
+      button.modal-close(data-modal='close')
+      .modal-block__container.modal-360__container
+        iframe(src='' allow='autoplay')
