--- a/src/styles/components/_blocks.scss
+++ b/src/styles/components/_blocks.scss
@@ -643,13 +643,19 @@
     z-index: 2;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    align-items: stretch;
   }
   &__top {
-    width: 100%;
+    flex: 0 0 auto;
     &:not(:last-child) {
       margin-bottom: 20px;
     }
+  }
+  &__bottom {
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
   }
   &__label-info {
     font-size: 12px;
@@ -657,6 +663,7 @@
     color: var(--color-muted);
     position: relative;
     margin-bottom: 15px;
+    min-height: 1.25em;
     .icon {
       position: absolute;
       width: 1em;
@@ -668,6 +675,14 @@
   &__title {
     display: block;
     font-size: 14px;
+    -webkit-line-clamp: 3;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    min-height: 3.75em;
+  }
+  &__packaging {
+    flex: 1 0 auto;
   }
   &__packaging-list {
     font-size: 12px;
@@ -986,50 +1001,39 @@
     &:not(:last-child) {
       td {
         padding-bottom: 10px;
-        &:first-child {
-          &::after {
-            bottom: calc(0.25em + 10px);
-          }
-        }
-      }
-    }
-    &:last-child {
-      td {
-        &:first-child {
-          &::after {
-            bottom: 0.25em;
-          }
-        }
       }
     }
   }
   td {
-    vertical-align: bottom;
     padding: 0;
-    position: relative;
+    width: 50%;
     span {
       display: inline;
-      background-color: #fff;
+      background-color: var(--color-background-4);
       position: relative;
       z-index: 2;
     }
     &:first-child {
+      vertical-align: top;
       padding-right: 8px;
       overflow: hidden;
       color: var(--color-muted);
-      &::after {
-        content: '';
-        display: block;
-        border-bottom: 1px dashed currentColor;
-        position: absolute;
-        left: 0;
-        width: 100vw;
-      }
       span {
         padding-right: 8px;
+        position: relative;
+        &::after {
+          content: '';
+          display: block;
+          border-bottom: 1px dashed currentColor;
+          position: absolute;
+          left: 100%;
+          bottom: 0.25em;
+          width: 100vw;
+        }
       }
     }
     &:last-child {
+      vertical-align: bottom;
       padding-left: 8px;
     }
   }
@@ -2005,37 +2009,55 @@
 }
 
 .map-section {
+  --px: 26px;
   &:last-child {
     margin: 0;
   }
   &__container {
-    display: flex;
+    position: relative;
+  }
+  &__content-wrapper {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    position: relative;
+    z-index: 2;
+    pointer-events: none;
   }
   &__content {
-    padding-right: var(--grid-gutter-x);
+    grid-column: span 6;
+    pointer-events: all;
+    background-color: #fff;
+    padding: 0 var(--px);
   }
   &__map {
-    position: relative;
-    flex: 1 1 auto;
-    iframe {
-      display: block;
-      position: absolute;
-      width: calc(100% + var(--content-gutter));
-      height: 100%;
-      top: 0;
-      left: 0;
-      border: 0;
-    }
+    display: block;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    border: 0;
   }
   &__title {
     font-weight: 700;
     flex: 0 0 auto;
   }
   &__elements {
-    padding-bottom: 30px;
+    margin: 0 calc(var(--px) * -1);
+    overflow: auto;
+    height: 440px;
+    &::-webkit-scrollbar {
+      width: 8px
+    }
+    &::-webkit-scrollbar-track {
+      background-color: var(--color-scrollbar-track);
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: var(--color-scrollbar-thumb);
+    }
   }
   &__element {
-    padding: 20px 0;
+    padding: 20px var(--px);
     &:not(:last-child) {
       border-bottom: 1px solid #F2F2F2;
     }
@@ -2049,37 +2071,33 @@
     color: var(--color-accent-1);
     margin-bottom: 2px;
   }
-  @include media-breakpoint-down(lg) {
-    &__container {
-      display: block;
+  &__section-title {
+    padding-left: var(--px);
+  }
+  @include media-breakpoint-down(md) {
+    --px: calc(var(--content-gutter));
+    &__map {
+      position: relative;
+      height: 400px;
+      width: 100%;
     }
     &__content {
+      grid-column: span 12;
+    }
+    &__content-wrapper {
       padding: 0;
+      max-width: 100%;
+    }
+    &__section-title {
+      padding-left: 0;
     }
     &__elements {
-      width: 100vw;
-      transform: translateX(calc(var(--content-gutter) * -1));
-    }
-    &__element {
-      padding: 20px calc(var(--content-gutter));
-    }
-    &__map {
-      height: 400px;
-      iframe {
-        width: 100vw;
-        left: 50%;
-        transform: translateX(-50%);
-      }
+      height: auto;
+      max-height: 300px;
     }
   }
   @include media-breakpoint-down(sm) {
-    &__elements {
-      width: calc(100% + var(--container-gutter-x) * 2);
-      transform: translateX(calc(var(--container-gutter-x) * -1));
-    }
-    &__element {
-      padding: 20px var(--container-gutter-x);
-    }
+    --px: var(--container-gutter-x);
   }
 }
 
@@ -2289,12 +2307,6 @@
   &__tab-head, &__tag-list {
     margin-bottom: 40px;
   }
-  &__block {
-    display: none;
-    &.is-active {
-      display: block;
-    }
-  }
 }
 
 .news-section {
@@ -2321,20 +2333,27 @@
   &__product {
     min-height: initial;
     max-width: 200px;
+    grid-column: span 2;
   }
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(xl) {
     &__section {
-      grid-column: span 4;
+      grid-column: span 5;
       &:last-child {
         padding-left: 30px;
       }
     }
-    &__product {
-      grid-column: 5/7;
+  }
+  @include media-breakpoint-down(xl) {
+    grid-template-columns: repeat(8, 1fr);
+    &__section {
+      grid-column: span 4;
     }
   }
   @include media-breakpoint-down(lg) {
-    grid-template-columns: 1fr;
+    display: block;
+    &__product {
+      margin-top: 40px;
+    }
   }
 }
 
