--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -7,6 +7,9 @@
     column-gap: var(--grid-gutter-x);
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(4, auto);
+    &::before, &::after {
+      display: none;
+    }
   }
   &__box-1 {
     grid-column: 1/4;
