--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -83,7 +83,7 @@
     display: none;
     &:checked ~ .checkbox__label {
       &:before {
-        border-color: var(--color-accent-1_2);
+        border-color: var(--color-accent-1);
       }
       &:after {
         opacity: 1;
