--- a/src/views/blocks/map.pug
+++ b/src/views/blocks/map.pug
@@ -1,11 +1,12 @@
 section.section.map-section 
-  .container 
-    .section__head
-      if map_type == 1
-        h3.section__title.map-section__section-title Где купить?
-      else 
-        h1.section__title Контакты
-    .map-section__container 
+  .section__head.container
+    if map_type == 1
+      h3.section__title.map-section__section-title Где купить?
+    else 
+      h1.section__title Контакты
+    
+  .map-section__container 
+    .map-section__content-wrapper.container
       .map-section__content  
         h6.map-section__title Адреса магазинов
         .map-section__elements 
@@ -21,8 +22,13 @@ section.section.map-section
             .map-section__element-type Гипермаркет
             .map-section__element-title Глобус. ш. Энтузиастов, 48, Балашиха
             .map-section__element-time Круглосуточно
+          .map-section__element
+            .map-section__element-type Гипермаркет
+            .map-section__element-title Глобус. ш. Энтузиастов, 48, Балашиха
+            .map-section__element-time Круглосуточно
+          .map-section__element
+            .map-section__element-type Гипермаркет
+            .map-section__element-title Глобус. ш. Энтузиастов, 48, Балашиха
+            .map-section__element-time Круглосуточно
 
-
-
-      .map-section__map 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d577336.7645875042!2d36.82512011568039!3d55.58074803516603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54afc73d4b0c9%3A0x3d44d6cc5757cf4c!2z0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8!5e0!3m2!1sru!2sua!4v1627325316065!5m2!1sru!2sua" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d577336.7645875042!2d36.82512011568039!3d55.58074803516603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54afc73d4b0c9%3A0x3d44d6cc5757cf4c!2z0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8!5e0!3m2!1sru!2sua!4v1627325316065!5m2!1sru!2sua" loading="lazy" class="map-section__map"></iframe>
