--- a/src/views/blog.pug
+++ b/src/views/blog.pug
@@ -10,20 +10,20 @@ block content
   -var breadcrumbs_links = ['Главная', page_title]
   include blocks/breadcrumbs
 
-  section.section.blog-section(data-tabs='parent')
+  section.section.blog-section
     .container 
       .section__head
         h1.section__title Блог
 
       .tab-head.blog-section__tab-head
         .tab-head__container
-          a(href="javascript:void(0);" data-tabs='link').tab-head__link.is-active Рецепты
-          a(href="javascript:void(0);" data-tabs='link').tab-head__link Советы диетолога
-          a(href="javascript:void(0);" data-tabs='link').tab-head__link Полезные советы
+          a(href="javascript:void(0);").tab-head__link.is-active Рецепты
+          a(href="javascript:void(0);").tab-head__link Советы диетолога
+          a(href="javascript:void(0);").tab-head__link Полезные советы
 
       .blog-section__content
       
-        .blog-section__block.is-active(data-tabs='block')
+        .blog-section__block
           .tag-list.blog-section__tag-list
             .tag-list__container 
               a(href="#").tag-element.tag-list__element.is-active
@@ -46,6 +46,25 @@ block content
                 svg.icon
                   use(xlink:href='./img/icons/sprite.svg#cupcake')
                 span Сладкое
+
+              #zel.lvl2
+                a#btn12.tag-element.tag-list__element
+                  .checkbox
+                    input#arrFilter2_263_1065839880.checkbox__input(type='checkbox' value='vse_retsepty' name='tag')
+                    label.checkbox__label(for='arrFilter2_263_1065839880')
+                      svg.icon
+                        use(xlink:href='./img/icons/sprite.svg#recipe-book')
+                      span Тест 1
+
+              #zel.lvl2.kombox-checked
+                a#btn12.tag-element.tag-list__element
+                  .checkbox
+                    input#arrFilter2_263_1065839880.checkbox__input(type='checkbox' value='vse_retsepty' name='tag')
+                    label.checkbox__label(for='arrFilter2_263_1065839880')
+                      svg.icon
+                        use(xlink:href='./img/icons/sprite.svg#recipe-book')
+                      span Тест 2
+
           
           .blog-grid 
             +recipe-block(1)
@@ -65,64 +84,6 @@ block content
           .load-more 
             a(href="#").button.button_style-2
               span Загрузить еще 
-
-        .blog-section__block(data-tabs='block')
-          .tag-list.blog-section__tag-list
-            .tag-list__container 
-              a(href="#").tag-element.tag-list__element.is-active
-                svg.icon
-                  use(xlink:href='./img/icons/sprite.svg#recipe-book')
-                span Все рецепты
-              a(href="#").tag-element.tag-list__element
-                svg.icon
-                  use(xlink:href='./img/icons/sprite.svg#bell-covering-hot-dish')
-                span Горячие блюда
-              a(href="#").tag-element.tag-list__element
-                svg.icon
-                  use(xlink:href='./img/icons/sprite.svg#salad')
-                span Салаты
-              a(href="#").tag-element.tag-list__element
-                svg.icon
-                  use(xlink:href='./img/icons/sprite.svg#nuggets')
-                span Закуски
-              a(href="#").tag-element.tag-list__element
-                svg.icon
-                  use(xlink:href='./img/icons/sprite.svg#cupcake')
-                span Сладкое
-          
-          .blog-grid 
-            +recipe-block(1, '2')
-            +recipe-block(2, '2')
-            +recipe-block(1, '2')
-
-        .blog-section__block(data-tabs='block')
-          .tag-list.blog-section__tag-list
-            .tag-list__container 
-              a(href="#").tag-element.tag-list__element.is-active
-                svg.icon
-                  use(xlink:href='./img/icons/sprite.svg#recipe-book')
-                span Все рецепты
-              a(href="#").tag-element.tag-list__element
-                svg.icon
-                  use(xlink:href='./img/icons/sprite.svg#bell-covering-hot-dish')
-                span Горячие блюда
-              a(href="#").tag-element.tag-list__element
-                svg.icon
-                  use(xlink:href='./img/icons/sprite.svg#salad')
-                span Салаты
-              a(href="#").tag-element.tag-list__element
-                svg.icon
-                  use(xlink:href='./img/icons/sprite.svg#nuggets')
-                span Закуски
-              a(href="#").tag-element.tag-list__element
-                svg.icon
-                  use(xlink:href='./img/icons/sprite.svg#cupcake')
-                span Сладкое
-          
-          .blog-grid 
-            +recipe-block(2, '2')
-            +recipe-block(1, '2')
-            +recipe-block(2, '2')
 
 
   include blocks/product-slider
