--- a/src/views/blocks/components.pug
+++ b/src/views/blocks/components.pug
@@ -154,7 +154,7 @@ mixin recipe-block(type, content)
           | Карамелизованная морковь с кешью кремом
         else 
           | Салат с киноа, авокадо и шампиньонами
-      if content !== '2'
+      if content !== 2
         .recipe-info 
           .recipe-info__item 
             svg.icon(viewBox="0 0 21 21")
