--- a/src/views/kontakty.pug
+++ b/src/views/kontakty.pug
@@ -72,3 +72,41 @@ block content
   section.section
     .container
       include blocks/banner1        
+
+  section.section
+    .container
+      .section__head
+        h2.section__title Где купить?
+      .partners-box
+        .partners-box__container
+          mixin item(image)
+            .partners-box__item
+              .image.image_contain 
+                img(data-src=`/img/partners/${image}.png`, alt="image").lazyload
+          +item('1')
+          +item('2')
+          +item('3')
+          +item('4')
+          +item('5')
+          +item('6')
+          +item('7')
+          +item('8')
+          +item('9')
+          +item('10')
+          +item('11')
+          +item('12')
+          +item('13')
+          +item('14')
+          +item('15')
+          +item('16')
+          +item('17')
+          +item('18')
+          +item('19')
+          +item('20')
+          +item('21')
+          +item('22')
+          +item('23')
+          +item('24')
+          +item('25')
+          +item('26')
+    
