--- a/src/views/kontakty.pug
+++ b/src/views/kontakty.pug
@@ -82,7 +82,7 @@ block content
           mixin item(image)
             .partners-box__item
               .image.image_contain 
-                img(data-src=`/img/partners/${image}.png`, alt="image").lazyload
+                img(data-src=`./img/partners/${image}.png`, alt="image").lazyload
           +item('1')
           +item('2')
           +item('3')
