--- a/src/views/blocks/map.pug
+++ b/src/views/blocks/map.pug
@@ -12,15 +12,15 @@ section.section.map-section
         .map-section__elements 
           .map-section__element
             .map-section__element-type Гипермаркет
-            .map-section__element-title Глобус. ш. Энтузиастов, 48, Балашиха
+            a(href="#").map-section__element-title Глобус. ш. Энтузиастов, 48, Балашиха
             .map-section__element-time Круглосуточно
           .map-section__element
             .map-section__element-type Супермаркет
-            .map-section__element-title «Азбука вкуса». ш. Энтузиастов, 48, Балашиха
+            a(href="#").map-section__element-title «Азбука вкуса». ш. Энтузиастов, 48, Балашиха
             .map-section__element-time Круглосуточно
           .map-section__element
             .map-section__element-type Гипермаркет
-            .map-section__element-title Глобус. ш. Энтузиастов, 48, Балашиха
+            a(href="#").map-section__element-title Глобус. ш. Энтузиастов, 48, Балашиха
             .map-section__element-time Круглосуточно
 
     .map-section__map
