--- a/src/styles/components/_fix.scss
+++ b/src/styles/components/_fix.scss
@@ -114,3 +114,53 @@
     }
   }
 }
+
+#kombox-filter.tag-list {
+  .tag-list__container {
+    margin: 0 !important;
+    display: block !important;
+  }
+  .catalogue-filter__category-content {
+    display: flex !important;
+    flex-wrap: wrap;
+    gap: 12px;
+    .lvl2 {
+      .tag-element {
+        margin: 0 !important;
+      }
+    }
+  }
+}
+
+.blog-grid {
+  padding-top: 0 !important;
+  &:not(:last-child) {
+    margin-bottom: var(--grid-gutter-x);
+  }
+}
+
+.blog-section__content {
+  .news-section {
+    margin-top: 0 !important;
+  }
+}
+
+.blog-section .tab-head {
+  margin-bottom: 60px;
+  @include media-breakpoint-down(sm) {
+    margin-bottom: 40px;
+  }
+}
+
+.news-section {
+  .items-slider {
+    margin-top: 150px;
+    margin-bottom: 0 !important;
+    .container {
+      padding: 0;
+    }
+    @include media-breakpoint-down(sm) {
+      margin-top: 100px;
+    }
+  }
+}
