--- a/src/views/blocks/header.pug
+++ b/src/views/blocks/header.pug
@@ -79,6 +79,11 @@ nav.mobile-navigation
           a(href="./blog.html").mobile-nav-list__link.link Блог
         li.mobile-nav-list__item 
           a(href="./novosti.html").mobile-nav-list__link.link Новости
+        li.mobile-nav-list__item 
+          a(href="#").mobile-nav-list__link.mobile-nav-list__link_opt.link
+            svg.icon
+              use(xlink:href='./img/icons/sprite.svg#box')
+            | Оптовикам
 
       .mobile-navigation__bottom 
         .mobile-navigation__bottom-item 
