--- a/src/views/layout/layout.pug
+++ b/src/views/layout/layout.pug
@@ -5,7 +5,7 @@ html(lang='ru')
   head
     meta(charset="utf-8")
     title #{title}
-    meta(name='viewport' content='width=360, initial-scale=1')
+    meta(name='viewport' content='width=device-width, initial-scale=1')
     meta(name='format-detection' content='telephone=no')
     meta(name='description' content='Крупнейший российский производитель и оптовый поставщик натуральных продуктов - орехов и сухофруктов.')
     //color
