--- a/src/styles/components/_blocks.scss
+++ b/src/styles/components/_blocks.scss
@@ -1326,6 +1326,13 @@
     gap: var(--grid-gutter-x);
     margin-bottom: 40px;
   }
+
+  
+  @include media-breakpoint-up(lg) {
+    &__head-reset {
+      display: none;
+    }
+  }
   @include media-breakpoint-down(xl) {
     &__wrapper {
       grid-template-columns: repeat(4, 1fr);
@@ -1422,6 +1429,9 @@
     &__head {
       display: none;
     }
+    &__close-button {
+      display: none !important;
+    }
     &__container {
       .container {
         padding: 0;
@@ -1458,6 +1468,12 @@
         align-items: center;
       }
       box-shadow: 0px 5px 6px rgba(0, 0, 0, 0.05);
+    }
+    &__close-button {
+      flex-shrink: 0;
+      border-radius: 0;
+      line-height: 60px;
+      font-size: 16px;
     }
     &__container {
       flex: 1 1 auto;
@@ -1646,7 +1662,7 @@
 
 
 .contacts-section {
-  &__container {
+  /* &__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: var(--grid-gutter-x);
@@ -1655,29 +1671,33 @@
     &__container {
       grid-template-columns: 1fr;
     }
-  }
+  } */
 }
 
 .contact-box {
   border-radius: 4px;
   box-shadow: var(--block-shadow);
+  padding: 50px 35px;
   overflow: hidden;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  &__content {
-    padding: 32px 36px 40px 36px;
-    flex: 1 1 auto;
+  &:not(:last-child) {
+    margin-bottom: 50px;
   }
   &__title {
     margin: 0 0 30px 0;
+    font-size: 28px;
   }
   &__elements {
     width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: var(--grid-gutter-x);
-    row-gap: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  &__item {
+    flex: 1 1 auto;
+  }
+  &__item-text {
+    display: block;
+    padding-left: 28px;
   }
   &__item-head {
     color: var(--color-accent-1);
@@ -1695,43 +1715,8 @@
       top: 0;
     }
   }
-  &__map {
-    position: relative;
-    &::before {
-      content: '';
-      display: block;
-      padding-top: 80%;
-    }
-    iframe {
-      position: absolute;
-      border: 0;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-    }
-  }
   @include media-breakpoint-down(lg) {
-    &__content {
-      padding: 30px 20px;
-    }
-    &__elements {
-      grid-template-columns: 1fr;
-    }
-  }
-  @include media-breakpoint-down(md) {
-    &__elements {
-      grid-template-columns: 1fr 1fr;
-    }
-  }
-  @include media-breakpoint-down(sm) {
-    &__elements {
-      grid-template-columns: 1fr;
-      row-gap: 20px;
-    }
-    &__item-head {
-      margin-bottom: 10px;
-    }
+    padding: 30px 20px;
   }
 }
 
@@ -2356,12 +2341,6 @@
         padding-top: 100%;
       }
     }
-  }
-}
-
-.blog-section {
-  &__tab-head, &__tag-list {
-    margin-bottom: 40px;
   }
 }
 
