--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -304,10 +304,17 @@
     padding: 12px 0;
     display: flex;
     align-items: center;
+    &_opt {
+      color: var(--color-accent-1);
+      font-weight: 700;
+      &[data-touch], &[data-hover] {
+        color: var(--color-accent-1_2);
+      }
+    }
     .icon {
       width: 20px;
       height: 20px;
-      margin-right: 5px;
+      margin-right: 7px;
     }
     &.is-active {
       font-weight: 700;
