--- a/src/views/blocks/map.pug
+++ b/src/views/blocks/map.pug
@@ -10,18 +10,39 @@ section.section.map-section
       .map-section__content  
         h6.map-section__title Адреса магазинов
         .map-section__elements 
+          //item
           .map-section__element
-            .map-section__element-type Гипермаркет
-            a(href="#").map-section__element-title Глобус. ш. Энтузиастов, 48, Балашиха
-            .map-section__element-time Круглосуточно
+            a(href="#").map-section__element-image.image.image_cover
+              img(src="./img/Rectangle 182.jpg", alt="image").lazyload
+              .icon
+                svg
+                  use(xlink:href='./img/icons/sprite.svg#play')
+            .map-section__element-content
+              .map-section__element-type Гипермаркет
+              a(href="#").map-section__element-title Глобус. ш. Энтузиастов, 48, Балашиха
+              .map-section__element-time Круглосуточно
+          //item
           .map-section__element
-            .map-section__element-type Супермаркет
-            a(href="#").map-section__element-title «Азбука вкуса». ш. Энтузиастов, 48, Балашиха
-            .map-section__element-time Круглосуточно
+            a(href="#").map-section__element-image.image.image_cover
+              img(src="./img/Rectangle 182.jpg", alt="image").lazyload
+              .icon
+                svg
+                  use(xlink:href='./img/icons/sprite.svg#play')
+            .map-section__element-content
+              .map-section__element-type Супермаркет
+              a(href="#").map-section__element-title «Азбука вкуса». ш. Энтузиастов, 48, Балашиха
+              .map-section__element-time Круглосуточно
+          //item
           .map-section__element
-            .map-section__element-type Гипермаркет
-            a(href="#").map-section__element-title Глобус. ш. Энтузиастов, 48, Балашиха
-            .map-section__element-time Круглосуточно
+            a(href="#").map-section__element-image.image.image_cover
+              img(src="./img/Rectangle 182.jpg", alt="image").lazyload
+              .icon
+                svg
+                  use(xlink:href='./img/icons/sprite.svg#play')
+            .map-section__element-content
+              .map-section__element-type Гипермаркет
+              a(href="#").map-section__element-title Глобус. ш. Энтузиастов, 48, Балашиха
+              .map-section__element-time Круглосуточно
 
     .map-section__map
       a.dg-widget-link(href='http://2gis.ru/moscow/profiles/70000001047778869,4504127909024155,70000001054919046/center/37.58422851562501,55.783716771543766/zoom/12?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=bigMap') Посмотреть на карте Москвы
