--- a/src/styles/components/_blocks.scss
+++ b/src/styles/components/_blocks.scss
@@ -885,6 +885,11 @@
       bottom: calc(100% + calc(53px - var(--grid-gutter-x) / 2));
     }
   }
+  @include media-breakpoint-down(md) {
+    .swiper-button {
+      bottom: calc(100% + calc(47px - var(--grid-gutter-x) / 2));
+    }
+  }
   @include media-breakpoint-down(sm) {
     .swiper-container {
       overflow: visible;
@@ -1022,7 +1027,6 @@
   }
   td {
     padding: 0;
-    width: 50%;
     span {
       display: inline;
       background-color: var(--color-background-4);
@@ -1319,6 +1323,9 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: var(--grid-gutter-x);
+    &:not(:last-child) {
+      margin-bottom: var(--grid-gutter-x);
+    }
   }
   &__head {
     display: grid;
@@ -1362,40 +1369,58 @@
 }
 
 .catalogue-filter {
-  --gutter: 12px;
+  --gy: 12px;
+  --gx: 12px;
   &__box {
     &:not(:last-child) {
       margin-bottom: 40px;
     }
   }
   &__category-head {
-    display: block;
-    padding: var(--gutter);
+    display: flex;
+    align-items: flex-start;
+  }
+
+  &__category-title {
+    padding: var(--gy) 0 var(--gy) var(--gx);
     position: relative;
     font-size: 16px;
     line-height: 20px;
     user-select: none;
+    hyphens: auto;
+    flex: 1 1 auto;
     transition: color $trs1;
-    .icon {
-      position: absolute;
-      width: 14px;
-      height: 14px;
-      right: var(--gutter);
-      top: 14px;
-      transform: rotate(-90deg);
-      color: var(--color-accent-1);
-    }
     &[data-touch], &[data-hover] {
       color: var(--color-accent-1);
     }
-    &.is-active {
-      font-weight: 700;
+  }
+
+  &__category-toggle {
+    flex: 0 0 auto;
+    padding: var(--gy) var(--gx);
+    position: relative;
+    display: flex;
+    .icon {
+      margin: auto;
+      width: 14px;
+      height: 14px;
+      transform: rotate(-90deg);
       color: var(--color-accent-1);
+      margin: 3px 0;
+      transition: transform $trs1;
+    }
+    &.is-active {
+      .icon {
+        transform: rotate(0) !important;
+      }
+    }
+    &[data-touch], &[data-hover] {
       .icon {
         transform: rotate(0);
       }
     }
   }
+
   &__category {
     &:not(:last-child) {
       border-bottom: 1px solid var(--color-borders);
@@ -1410,7 +1435,7 @@
     }
   }
   &__category-element {
-    padding: var(--gutter);
+    padding: var(--gy) var(--gx);
     &:not(:last-child) {
       border-bottom: 1px solid var(--color-borders);
     }
@@ -1489,17 +1514,12 @@
     }
   }
   @include media-breakpoint-down(sm) {
-    --gutter: 12px var(--grid-gutter-x);
+    --gx: var(--container-gutter-x);
     &__container {
       padding: 40px 0;
     }
     &__category {
-      margin: 0 calc(var(--grid-gutter-x) * -1);
-    }
-    &__category-head {
-      .icon {
-        right: calc(var(--grid-gutter-x) + 6px);
-      }
+      margin: 0 calc(var(--gx) * -1);
     }
   }
 }
@@ -2096,8 +2116,47 @@
   }
   &__element {
     padding: 20px var(--px);
+    display: flex;
+    align-items: flex-start;
     &:not(:last-child) {
       border-bottom: 1px solid #F2F2F2;
+    }
+  }
+  &__element-content {
+    flex: 0 1 auto;
+  }
+  &__element-image {
+    flex: 0 0 140px;
+    margin-right: 25px;
+    &::before {
+      content: '';
+      display: block;
+      padding-top: 46%;
+    }
+    .icon {
+      position: absolute;
+      z-index: 2;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      display: flex;
+      background-color: #fff;
+      color: var(--color-accent-1);
+      border: 2px solid #fff;
+      transition: color $trs1;
+      svg {
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    &[data-touch], &[data-hover] {
+      .icon {
+        color: var(--color-accent-1_2);
+      }
     }
   }
   &__element-type {
@@ -2115,6 +2174,17 @@
   }
   &__section-title {
     padding-left: var(--px);
+  }
+  @include media-breakpoint-down(lg) {
+    &__element-image {
+      flex: 0 0 110px;
+      margin-right: 20px;
+      &::before {
+        content: '';
+        display: block;
+        padding-top: 60%;
+      }
+    }
   }
   @include media-breakpoint-down(md) {
     --px: calc(var(--content-gutter));
@@ -2139,6 +2209,10 @@
   }
   @include media-breakpoint-down(sm) {
     --px: var(--container-gutter-x);
+    &__element-image {
+      margin-right: 15px;
+      flex: 0 0 100px;
+    }
   }
 }
 
