--- a/src/views/katalog.pug
+++ b/src/views/katalog.pug
@@ -33,7 +33,7 @@ block content
                       a(href="#").catalogue-filter__category-title
                         span Орехи
 
-                      button(data-toggle="trigger").catalogue-filter__category-toggle.is-active
+                      button(data-toggle="trigger" type='button').catalogue-filter__category-toggle.is-active
                         svg.icon
                           use(xlink:href='./img/icons/sprite.svg#drop-arrow')
                     
@@ -75,7 +75,7 @@ block content
                       a(href="#").catalogue-filter__category-title
                         span Шоколад и мармелад
 
-                      button(data-toggle="trigger").catalogue-filter__category-toggle
+                      button(data-toggle="trigger" type='button').catalogue-filter__category-toggle
                         svg.icon
                           use(xlink:href='./img/icons/sprite.svg#drop-arrow')
 
