--- a/src/views/layout/layout.pug
+++ b/src/views/layout/layout.pug
@@ -46,6 +46,8 @@ html(lang='ru')
     script(src="./scripts/libs/inputmask.min.js")
     script(src="./scripts/libs/current-device.min.js")
     script(src="./scripts/scripts.js")
+
+    script(src="./scripts/filter-fix.js")
     
 
     //preview only 
